# python-almanachclient

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  requirements.txt  rtd-requirements.txt  setup.cfg  test-requirements.txt  tox.ini
almanachclient/: __init__.py  exceptions.py  http_client.py  keystone_client.py  shell.py  version.py
almanachclient/commands/: attach_volume.py  create_instance.py  create_volume.py  create_volume_type.py  delete_instance.py  delete_volume.py  delete_volume_type.py  detach_volume.py  endpoint.py  get_entity.py  get_volume_type.py  list_entities.py  list_entity.py  list_instance.py  list_volume_type.py  list_volumes.py  resize_instance.py  resize_volume.py  tenant_entities.py  update_instance_entity.py  version.py
almanachclient/tests/: test_almanachclient.py  test_keystone_client.py
almanachclient/tests/commands/: test_attach_volume.py  test_create_instance.py  test_create_volume.py  test_create_volume_type.py  test_delete_instance.py  test_delete_volume.py  test_delete_volume_type.py  test_detach_volume.py  test_get_entity.py  test_get_volume_type.py  test_list_entities.py  test_list_entity.py  test_list_instance.py  test_list_volume.py  test_list_volume_type.py  test_resize_instance.py  test_resize_volume.py  test_update_instance_entity.py
almanachclient/tests/v1/: test_client.py
almanachclient/v1/: client.py  version_cli.py
doc/: python_api.rst
doc/source/: conf.py  index.rst  installation.rst  usage.rst  usage_api.rst  usage_cli.rst
doc/source/api/: almanachclient.exceptions.rst  almanachclient.http_client.rst  almanachclient.keystone_client.rst  almanachclient.shell.rst  almanachclient.v1.client.rst  almanachclient.version.rst  autoindex.rst
releasenotes/source/: conf.py  index.rst
