[metadata]
name = python-almanachclient
summary = Almanach API client
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    almanachclient

[entry_points]
console_scripts =
    almanach = almanachclient.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
autodoc_index_modules = true
autodoc_exclude_modules =
    almanachclient.tests.*
    almanachclient.commands.*
    almanachclient.http_client
    almanachclient.shell
    almanachclient.version

[wheel]
universal = 1
